Fix alignment issue

--- a/src/pages/Menu.module.scss
+++ b/src/pages/Menu.module.scss
@@ -42,12 +42,16 @@
 
 .optionsButton,
 .goButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 600;
   color: config.$text;
   border: none;
   font-size: 1.875rem;
   text-align: center;
-  // border-radius: 50%;
+  text-align: -webkit-center;
+  border-radius: 50%;
   width: 100px;
   height: 100px;
 }
